@@ -1,3 +1,8 @@
+2009-06-17  Claudio Saavedra  <csaavedra@igalia.com>
+
+	* hildon/hildon-caption.c: Other documentation fixes to
+	HildonCaption.
+
 2009-06-17  David King  <davidk@openismus.com>
 
 	* hildon/hildon-caption.c: Minor documentation updates for
